# UpdateDemo

./: CMakeLists.txt  Go  IUpdaterCtr.c  README.md
UpdaterClient/: CMakeLists.txt  ClientHandler.c  Handler.c  Request.c  UpdaterClient.c
UpdaterService/: CMakeLists.txt  Response.c  ServerHandler.c  UpdaterService.c  VersionSwitch.c
includes/: ClientHandler.h  Connection.h  Handler.h  IUpdaterCtr.h  Request.h  Response.h  ServerHandler.h  VersionSwitch.h
messageV1/: CMakeLists.txt  MessageV1.c
messageV2/: CMakeLists.txt  MessageV2.c
